--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@thirdweb-dev/sdk": "^3",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
+    "fetch": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.4"
